--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node backend//database//server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,10 +11,11 @@
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
     "express": "^4.21.1",
-    "framer-motion": "^11.11.11",
+    "mongoose": "^8.8.1",
     "next": "15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next-auth": "^4.24.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
