--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node backend//database//server.js",
+    "dev": "nodemon backend//database//server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.6",
     "express": "^4.21.1",
+    "mongodb": "5.5",
     "mongoose": "^8.8.2",
     "next": "15.0.2",
     "next-auth": "^4.24.10",
+    "node-geocoder": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
