--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.6",
+    "aos": "^2.3.4",
     "express": "^4.21.1",
     "mongodb": "5.5",
     "mongoose": "^8.8.2",
@@ -21,12 +22,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
+    "@types/swiper": "^5.4.3",
     "nodemon": "^3.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
